--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,8 @@
-[client]
-showErrorDetails = false
-showWarningOnDirectExecution = false
 
 [theme]
 
-primaryColor="#585858"
-backgroundColor="#F8F8F8"
-secondaryBackgroundColor="#e6f3ff"
+primaryColor="#0a6bfe"
+backgroundColor="#D8D8D8"
+secondaryBackgroundColor="#e9e9e9"
 textColor="#262730"
 font="sans serif"
